<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom">

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/are_you_sure_you_want_to_delete_everything"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.277" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/ripple_dialog"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/btn_color"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_message"
            style="?android:attr/borderlessButtonStyle" />

        <View
            android:layout_width="1dp"
            android:layout_height="17sp"
            android:background="@color/dialog_btn_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_btn_delete"
            app:layout_constraintStart_toEndOf="@+id/dialog_btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/dialog_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btn_delete"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ripple_dialog"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_message"
            style="?android:attr/borderlessButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>